--- a/vcs/build.gradle
+++ b/vcs/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     compile group: 'com.beust', name: 'jcommander', version: '1.48'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-io
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    // For persistence
+    compile group: 'org.organicdesign', name: 'UncleJim', version: '2.0.13'
 }
