--- a/ftp/build.gradle
+++ b/ftp/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-io
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    compileOnly "org.projectlombok:lombok:1.16.10"
 }
