--- a/torrent/build.gradle
+++ b/torrent/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     compileOnly "org.projectlombok:lombok:1.16.10"
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
 }
