--- a/torrent/build.gradle
+++ b/torrent/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-io
-    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     compileOnly "org.projectlombok:lombok:1.16.10"
     // https://mvnrepository.com/artifact/com.google.guava/guava
